add request history table

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5666,3 +5666,22 @@ white = #fff
 		i
 			font-size: 1.5em;
 			cursor: pointer;
+	.requests-table
+		width 100%
+		font-family: 'Montserrat',sans-serif;
+		font-size 12px
+		color charcoal-grey
+		td
+			padding 5px 0
+		.head
+			font-weight bold
+		.state
+			&.green
+				color #417505
+			&.blue
+				color #276cf2
+			&.red
+				color #a21224
+		a
+			text-decoration underline
+			color charcoal-grey
