--- a/app/views/user/account/requests.html
+++ b/app/views/user/account/requests.html
@@ -348,6 +348,49 @@
 							<p>Listo! La obra debe estar por llegar a su destino, te avisaremos cuando </p>
 						</div>
 
+						<p class="open-seller-main-title u-margin-top-30">Histórico de operaciones</p>
+
+						<p class="u-separator u-margin-top-10 u-margin-bottom-20" style="background: #979797;"></p>
+
+						<table class="requests-table">
+							<tr class="head">
+								<td>Id de Operacion</td>
+								<td>Monto Cobrado</td>
+								<td>Fecha de cobro</td>
+								<td>Fecha de pago</td>
+								<td>Banco</td>
+								<td>Estado</td>
+								<td>Detalle</td>
+							</tr>
+							<tr>
+								<td>OO.23232.2123</td>
+								<td>USD 3453.34</td>
+								<td>12/05/2016</td>
+								<td>15/05/05</td>
+								<td>INTERBANK</td>
+								<td><span class="state green">Por depositar</span></td>
+								<td><a href="#">Ver Detalle</a></td>
+							</tr>
+							<tr>
+								<td>OO.23232.2123</td>
+								<td>USD 3453.34</td>
+								<td>12/05/2016</td>
+								<td>15/05/05</td>
+								<td>INTERBANK</td>
+								<td><span class="state blue">Pagado</span></td>
+								<td><a href="#">Ver Detalle</a></td>
+							</tr>
+							<tr>
+								<td>OO.23232.2123</td>
+								<td>USD 3453.34</td>
+								<td>12/05/2016</td>
+								<td>15/05/05</td>
+								<td>INTERBANK</td>
+								<td><span class="state red">Observado</span></td>
+								<td><a href="#">Ver Detalle</a></td>
+							</tr>
+						</table>
+
 					</form>
 				</div>
 			</div>
