add acum bottom text

--- a/app/views/user/account/requests.html
+++ b/app/views/user/account/requests.html
@@ -348,6 +348,8 @@
 							<p>Listo! La obra debe estar por llegar a su destino, te avisaremos cuando </p>
 						</div>
 
+						<p class="open-seller-main-title u-margin-top-30" style="font-size: 14px; text-align: right;">Monto Cobrado: USD 245.25</p>
+
 						<p class="open-seller-main-title u-margin-top-30">Histórico de operaciones</p>
 
 						<p class="u-separator u-margin-top-10 u-margin-bottom-20" style="background: #979797;"></p>
