change seller view

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2543,7 +2543,11 @@ white = #fff
 				.information-center
 					margin 0 40px
 
-				
+	.flex-input
+		display flex
+		input:first-child
+			width 60px
+			
 @media (min-width: 630px)
 	.am-profile-box
 		padding 60px 60px !important
