--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -76,7 +76,23 @@
 							</div>
 							<div class="grid-50 mobile-grid-100">
 								<p class="title">Ciudad</p>
-								<input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/>
+								<!-- <input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/> -->
+								<select class="input select" name='city'>
+									<option disabled selected>Seleccionar ciudad</option>
+									<option>Argentina</option>
+									<option>Bolivia</option>
+									<option>Brasil</option>
+									<option>Chile</option>
+									<option>Colombia</option>
+									<option>Ecuador</option>
+									<option>España</option>
+									<option>Estados Unidos</option>
+									<option>Mexico</option>
+									<option>Paraguay</option>
+									<option>Peru</option>
+									<option>Uruguay</option>
+									<option>Venezuela</option>
+								</select>
 							</div>
 
 							<div class="grid-50 mobile-grid-100">
@@ -92,13 +108,19 @@
 								<p class="title">Dirección de Envío</p>
 								<input class="input" type="text" value="{{user.direction}}" name='direction' placeholder="Dirección Línea 1"/>
 								<p class="title">Teléfono móvil</p>
-								<input class="input" type="text" value="{{user.phone}}" name='phone' placeholder="Ingresa el número de whatsapp"/>
-								<p class="title">Usuario Paypal</p>
-								<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/>
+								<div class="flex-input">
+									<input class="input" type="text" value="+ 51" name='' placeholder=""/>
+									<input class="input" type="text" value="{{user.phone}}" name='phone' placeholder="Ingresa tu teléfono"/>
+								</div>
+								<!-- <p class="title">Usuario Paypal</p>
+								<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/> -->
 							</div>
 
+							<div class="separator u-margin-top-30">
+								<span class="line"></span><span class="text">DATOS DE PAGO</span><span class="line"></span>
+							</div>
 
-							<div class="artist-data country-container {% if user.country !== 'Peru' %} hide {%endif%}">
+							<div class="artist-data country-container {% if user.country !== 'Peru' %}  {%endif%}">
 								<div class="separator u-margin-top-40">
 									<span class="line"></span><span class="text">VENDEDORES EN PERÚ </span><span class="line"></span>
 								</div>
@@ -120,12 +142,17 @@
 									<input class="input" type="text" value="{{user.documentValue}}" name='documentValue' placeholder="Ingresa un documento válido"/>
 									<p class="title">Nombre completo/razón social</p>
 									<input class="input" type="text" value="{{user.businessName}}" name='businessName' placeholder="Ingresa un documento válido"/>
+									<p class="title">Banco</p>
+									<input class="input" type="text" value="" name='' placeholder="Ingresa el nombre de tu banco"/>
+									<p class="title">Número de cuenta con código Interbancario CCI</p>
+									<input class="input" type="text" value="" name='' placeholder="Ingresa tu número de cuenta"/>
 								</div>
 							</div>
 							{% if !user.isSeller %}
 							<p class="title">Acuerdos con el usuario</p>
 
-							<p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p>
+							<!-- <p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p> -->
+							<p class="subtitle">Asegúrate de leer los términos y condiciones</p>
 
 							<table class="u-margin-top-20">
 								<tr>
