add edit menu in work-card

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1198,6 +1198,29 @@ white = #fff
 	right 5px
 	color white
 	cursor pointer
+	
+.work-card-options
+	position absolute
+	top 0
+	right 0
+	text-align right
+	i
+		font-size 1.15em
+		padding 5px
+		color white
+		cursor pointer
+	.menu
+		background white
+		text-align left
+		min-width 80px
+		margin 0 5px
+		a
+			color #333
+			font-family: 'Montserrat',sans-serif;
+			font-size 11px
+			padding 8px 10px
+			display inline-block
+			width 100%
 
 .private
 	z-index: 1;
