--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3450,6 +3450,9 @@ white = #fff
 	height: 240px;
 	overflow: hidden;
 	position relative
+	// &.product
+	// 	height: 250px;
+		
 	.nextButton
 		position absolute
 		right 0
@@ -3491,11 +3494,21 @@ white = #fff
 		margin 10px 5px
 		background-size cover
 		background-position center center
-		// display block
+		position relative
+		// &.product
+		// 	height 250px
 		> div
 			height 100%
 		&:first-child
 			margin-left 0
+		.product-name
+			position absolute
+			bottom 0
+			width 100%
+			text-align center
+			font-family: 'PT Serif', serif;
+			font-size 14px
+			color #333
 
 
 .am-checkout
