remove directions of buy

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3557,7 +3557,7 @@ white = #fff
 				border solid 1px #bac5c7
 				border-radius 4px
 				.address
-					cursor pointer
+					// cursor pointer 
 					padding 10px
 					display flex
 					align-items center
