--- a/app/views/user/product/buy.html
+++ b/app/views/user/product/buy.html
@@ -14,7 +14,7 @@
 							<div class="grid-70">
 								<div class="checkout-info">
 									<div class="addresses">
-										<div class="address">
+										<!-- <div class="address">
 											<input type="radio" name="address">
 											<div>
 												<p class="address-title">Luis Eduardo Augusto</p>
@@ -23,10 +23,11 @@
 												<p class="address-subtitle">Perú</p>
 												<p class="address-subtitle">Tel:+51944426766</p>
 											</div>
-										</div>
+										</div> -->
 										<div class="address">
-											<input type="radio" name="address">
-											<p class="address-title">Agregar nueva dirección de envío</p>
+											<!-- <input type="radio" name="address"> -->
+											<!-- <p class="address-title">Agregar nueva dirección de envío</p> -->
+											<p class="address-title">Ingresa datos de envío</p>
 										</div>
 										<div class="address" style="padding-bottom: 20px;">
 											<div class="grid-container grid-parent" style="width: 100%;">
