add modal click in validation seller

--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -228,6 +228,10 @@
 $(function() {
 	$('.seller').addClass('selected');
 	new APP.AccountSellerScreen();
+
+	
+		$('#go-collection-modal').leanModal();
+		$('#go-share-modal').leanModal();
 });
 </script>
 	<!-- $('.') -->
