--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -76,23 +76,7 @@
 							</div>
 							<div class="grid-50 mobile-grid-100">
 								<p class="title">Ciudad</p>
-								<!-- <input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/> -->
-								<select class="input select" name='city'>
-									<option disabled selected>Seleccionar ciudad</option>
-									<option>Argentina</option>
-									<option>Bolivia</option>
-									<option>Brasil</option>
-									<option>Chile</option>
-									<option>Colombia</option>
-									<option>Ecuador</option>
-									<option>España</option>
-									<option>Estados Unidos</option>
-									<option>Mexico</option>
-									<option>Paraguay</option>
-									<option>Peru</option>
-									<option>Uruguay</option>
-									<option>Venezuela</option>
-								</select>
+								<input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/>
 							</div>
 
 							<div class="grid-50 mobile-grid-100">
@@ -109,15 +93,11 @@
 								<input class="input" type="text" value="{{user.direction}}" name='direction' placeholder="Dirección Línea 1"/>
 								<p class="title">Teléfono móvil</p>
 								<div class="flex-input">
-									<input class="input" type="text" value="+ 51" name='' placeholder=""/>
+									<input class="input" type="text" value="+ 51" name='' placeholder="" disabled/>
 									<input class="input" type="text" value="{{user.phone}}" name='phone' placeholder="Ingresa tu teléfono"/>
 								</div>
 								<!-- <p class="title">Usuario Paypal</p>
 								<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/> -->
-							</div>
-
-							<div class="separator u-margin-top-30">
-								<span class="line"></span><span class="text">DATOS DE PAGO</span><span class="line"></span>
 							</div>
 
 							<div class="artist-data country-container {% if user.country !== 'Peru' %}  {%endif%}">
@@ -143,9 +123,9 @@
 									<p class="title">Nombre completo/razón social</p>
 									<input class="input" type="text" value="{{user.businessName}}" name='businessName' placeholder="Ingresa un documento válido"/>
 									<p class="title">Banco</p>
-									<input class="input" type="text" value="" name='' placeholder="Ingresa el nombre de tu banco"/>
+									<input class="input" type="text" value="{{user.bank}}" name='bank' placeholder="Ingresa el nombre de tu banco"/>
 									<p class="title">Número de cuenta con código Interbancario CCI</p>
-									<input class="input" type="text" value="" name='' placeholder="Ingresa tu número de cuenta"/>
+									<input class="input" type="text" value="{{user.cci}}" name='cci' placeholder="Ingresa tu número de cuenta"/>
 								</div>
 							</div>
 							{% if !user.isSeller %}
