discover collections fixed

--- a/app/views/partials/elements/collection.html
+++ b/app/views/partials/elements/collection.html
@@ -18,18 +18,18 @@
           </div>
           <div class="collection-card-images">
             <% _.each([0,1,2], function(i) { %>
-              <% if(works[i] && works[i].photo) { %>
-                <% if (!viewer && works[i].nsfw) { %>
+              <% if(items[i] && items[i].photo) { %>
+                <% if (!viewer && items[i].nsfw) { %>
                     <% if(i === 0) { %>
-                      <div class="collection-card-image" style="background-image: url('<%= addFilter(works[i].photo, 'w_230,h_110,c_fill,e_blur:1500/l_text:Arial_24_bold:+18,co_rgb:ffffff') %>')"></div>
+                      <div class="collection-card-image" style="background-image: url('<%= addFilter(items[i].photo, 'w_230,h_110,c_fill,e_blur:1500/l_text:Arial_24_bold:+18,co_rgb:ffffff') %>')"></div>
                     <% } else { %>
-                      <div class="collection-card-image" style="background-image: url('<%= addFilter(works[i].photo, 'w_110,h_110,c_fill,e_blur:1500/l_text:Arial_24_bold:+18,co_rgb:ffffff') %>')"></div>
+                      <div class="collection-card-image" style="background-image: url('<%= addFilter(items[i].photo, 'w_110,h_110,c_fill,e_blur:1500/l_text:Arial_24_bold:+18,co_rgb:ffffff') %>')"></div>
                     <% } %>
                 <% } else { %>
                     <% if(i === 0) { %>
-                      <div class="collection-card-image" style="background-image: url('<%= addFilter(works[i].photo, 'w_230,h_110,c_fill') %>')"></div>
+                      <div class="collection-card-image" style="background-image: url('<%= addFilter(items[i].photo, 'w_230,h_110,c_fill') %>')"></div>
                     <% } else { %>
-                      <div class="collection-card-image" style="background-image: url('<%= addFilter(works[i].photo, 'w_110,h_110,c_fill') %>')"></div>
+                      <div class="collection-card-image" style="background-image: url('<%= addFilter(items[i].photo, 'w_110,h_110,c_fill') %>')"></div>
                     <% } %>
                 <% } %>
               <% } else { %>
