--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -383,6 +383,7 @@
 
 			<form class="add-collection-form">
 				<input class="u-margin-top-10" type="text" name='name' required placeholder="Crear una colección nueva">
+				<input type="hidden" name='meta' value="works">
 				<button class="u-margin-top-10 color-black bg-gray wd-auto">AÑADIR</button>
 			</form>
 			<ul class="collections u-margin-top-20">
