--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -377,6 +377,7 @@
 
 			<form class="add-collection-form">
 				<input class="u-margin-top-10" type="text" name='name' required placeholder="Crear una colección nueva">
+				<input type="hidden" name='meta' value="products">
 				<button class="u-margin-top-10 color-black bg-gray wd-auto">AÑADIR</button>
 			</form>
 			<ul class="collections u-margin-top-20">
